codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_mode_scope_popup_long_model.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
expression: "render_bottom_popup(&chat, 48)"
---
  Apply model settings
  Choose where to apply high reasoning.


› 1. Apply to Plan mode override
  2. Apply to global default and Plan mode
     override

  enter select · esc back
