codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_mode_scope_popup_same_model.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
assertion_line: 506
expression: "render_bottom_popup(&chat, 100)"
---
  Apply model settings
  Choose where to apply high reasoning.


› 1. Apply to Plan mode override                     Always use high reasoning in Plan mode
  2. Apply to global default and Plan mode override  Set the global default reasoning level and Plan
                                                     mode override, replacing the current built-in
                                                     Plan default (medium)

  enter select · esc back
